--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.username=root
 
 
-spring.datasource.url=jdbc:postgresql://postgres:Ra43xWBcJRmgrCAHqhjY@containers-us-west-151.railway.app:7654/railway
+spring.datasource.url=postgresql://postgres:Ra43xWBcJRmgrCAHqhjY@containers-us-west-151.railway.app:7654/railway
 #spring.datasource.url=jdbc:postgresql://localhost:5432/bd
-spring.datasource.username=root
+spring.datasource.username=postgres
 #spring.datasource.password=root
 spring.datasource.password=Ra43xWBcJRmgrCAHqhjY
 
