--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.username=root
 
 
-spring.datasource.url=jdbc:postgresql://postgres:Ra43xWBcJRmgrCAHqhjY@containers-us-west-151.railway.app:7654/railway
+spring.datasource.url=jdbc:postgresql://postgres:jv3eNEgflil7glqDFFXY@containers-us-west-106.railway.app:6074/railway
 #spring.datasource.url=jdbc:postgresql://localhost:5432/bd
 spring.datasource.username=postgres
 #spring.datasource.password=root
-spring.datasource.password=Ra43xWBcJRmgrCAHqhjY
+spring.datasource.password=jv3eNEgflil7glqDFFXY
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
