--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.username=root
 
 
-spring.datasource.url=jdbc:postgresql://postgres:jv3eNEgflil7glqDFFXY@containers-us-west-106.railway.app:6074/railway
+spring.datasource.url=jdbc:mysql://root:VU2mmPwhLa4w9d0AlYFV@containers-us-west-89.railway.app:6403/railway
 #spring.datasource.url=jdbc:postgresql://localhost:5432/bd
-spring.datasource.username=postgres
+spring.datasource.username=root
 #spring.datasource.password=root
-spring.datasource.password=jv3eNEgflil7glqDFFXY
+spring.datasource.password=VU2mmPwhLa4w9d0AlYFV
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
